RESOLVED FIXED104386
Tidy up the tiled scrolling indicator, fix with zooming
https://bugs.webkit.org/show_bug.cgi?id=104386
Summary Tidy up the tiled scrolling indicator, fix with zooming
Simon Fraser (smfr)
Reported 2012-12-07 12:03:39 PST
Tidy up the tiled scrolling indicator, fix with zooming
Attachments
Patch (3.04 KB, patch)
2012-12-07 12:05 PST, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2012-12-07 12:05:05 PST
Simon Fraser (smfr)
Comment 2 2012-12-10 14:55:17 PST
Note You need to log in before you can comment on or make changes to this bug.