Tidy up the tiled scrolling indicator, fix with zooming https://bugs.webkit.org/show_bug.cgi?id=104386

Reviewed by Tim Horton.

Fix the tiled scrolling indicator to not get tiny when zooming,
to not poke out of the bottom of the window, and to not look
so crappy.

* platform/graphics/ca/mac/TileCache.mm:
(WebCore::TileCache::updateTileCoverageMap):
(WebCore::TileCache::drawTileMapContents):

Canonical link: https://commits.webkit.org/122765@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137209 268f45cc-cd09-0410-ab3c-d52691b4dbfc